@@ -1,91 +1,73 @@
 package be.iccbxl.pid.reservationsspringboot.api.controller;
-import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
-import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
+
+import be.iccbxl.pid.reservationsspringboot.dto.ArtistDTO;
+import be.iccbxl.pid.reservationsspringboot.dto.ArtistTypeDTO;
+import be.iccbxl.pid.reservationsspringboot.mapper.ArtistMapper;
+import be.iccbxl.pid.reservationsspringboot.model.Artist;
+import be.iccbxl.pid.reservationsspringboot.service.ArtistService;
+import jakarta.validation.Valid;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-
-import org.springframework.hateoas.CollectionModel;
-import org.springframework.hateoas.EntityModel;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
-
-import be.iccbxl.pid.reservationsspringboot.api.hateoas.ArtistModelAssembler;
-import be.iccbxl.pid.reservationsspringboot.model.Artist;
-import be.iccbxl.pid.reservationsspringboot.repository.ArtistRepository;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api")
+
 public class ArtistApiController {
 
-    private final ArtistRepository repository;
-    private final ArtistModelAssembler assembler;
-
-    public ArtistApiController(ArtistRepository repository, ArtistModelAssembler assembler) {
-        this.repository = repository;
-        this.assembler = assembler;
-    }
-
-    // GET all artists
+    @Autowired
+    private ArtistService artistService;
+    @Autowired
+    private ArtistMapper artistMapper;
+       // GET /api/artists
     @GetMapping("/artists")
-    public CollectionModel<EntityModel<Artist>> all() {
-        List<EntityModel<Artist>> artists = ((List<Artist>) repository.findAll()).stream()
-                .map(assembler::toModel)
-                .toList();
-
-        return CollectionModel.of(artists,
-                linkTo(methodOn(ArtistApiController.class).all()).withSelfRel());
+    public List<ArtistDTO> listAll() {
+        return artistService.getAllArtists().stream()
+                .map(artistMapper::toDTO)
+                .collect(Collectors.toList());
     }
 
-    // GET a single artist
+    // GET /api/artists/{id}
     @GetMapping("/artists/{id}")
-    public EntityModel<Artist> one(@PathVariable Long id) {
-        Artist artist = repository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Artist not found"));
-
-        return assembler.toModel(artist);
+    public ResponseEntity<ArtistTypeDTO> getById(@PathVariable Long id) {
+        Artist a = artistService.getArtist(id);
+        if (a == null) {
+            return ResponseEntity.notFound().build();
+        }
+        return ResponseEntity.ok(artistMapper.toArtistTypeDTO(a));
     }
 
-    // POST a new artist
-    @PostMapping("/admin/artists")
-    public ResponseEntity<?> newArtist(@RequestBody Artist newArtist) {
-        Artist savedArtist = repository.save(newArtist);
+    @PostMapping ("/artists")
+    public ResponseEntity<ArtistDTO> create(@Valid @RequestBody ArtistDTO artistDTO) {
+        Artist a = artistMapper.toEntity(artistDTO);
+        artistService.addArtist(a);
+        return ResponseEntity.ok(artistMapper.toDTO(a));
 
-        return ResponseEntity
-                .created(linkTo(methodOn(ArtistApiController.class).one(savedArtist.getId())).toUri())
-                .body(assembler.toModel(savedArtist));
     }
 
-    // PUT (update) an artist
-    @PutMapping("/admin/artists/{id}")
-    public ResponseEntity<?> replaceArtist(@RequestBody Artist newArtist, @PathVariable Long id) {
-        Artist updatedArtist = repository.findById(id)
-                .map(artist -> {
-                    artist.setFirstname(newArtist.getFirstname());
-                    artist.setLastname(newArtist.getLastname());
-                    return repository.save(artist);
-                })
-                .orElseGet(() -> {
-                    newArtist.setId(id);
-                    return repository.save(newArtist);
-                });
+    @PutMapping("/artists/{id}")
+    public ResponseEntity<ArtistDTO> update(@Valid @PathVariable Long id, @RequestBody ArtistDTO artistDTO ) {
+        Artist existing = artistService.getArtist(id);
+        if (existing == null) return ResponseEntity.notFound().build();
 
-        return ResponseEntity
-                .created(linkTo(methodOn(ArtistApiController.class).one(updatedArtist.getId())).toUri())
-                .body(assembler.toModel(updatedArtist));
+        existing.setFirstname( artistDTO.getFirstname() );
+        existing.setLastname( artistDTO.getLastname() );
+        artistService.updateArtist( id, existing );
+
+        return ResponseEntity.ok(artistMapper.toDTO(existing));
     }
+    @DeleteMapping("/artists/{id}")
+    public ResponseEntity<Void> delete(@PathVariable Long id) {
+        Artist existing = artistService.getArtist(id);
+        if (existing == null) return ResponseEntity.notFound().build();
 
-    // DELETE an artist
-    @DeleteMapping("/admin/artists/{id}")
-    public ResponseEntity<?> deleteArtist(@PathVariable Long id) {
-        repository.deleteById(id);
+        artistService.deleteArtist(id);
         return ResponseEntity.noContent().build();
-    }
-}
 
+    }
+
+
+}
